Weighted Normal modifier produces weird artefacts with Keep Sharp enabled #108039

Closed
opened 2023-05-18 10:07:38 +02:00 by Alex P · 7 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-17 23:33, hash: a9358f5274b6
Broken by 17d161f565

Short description of error
Weighted Normal modifier produces weird artefacts with Keep Sharp enabled. Previously it correctly took auto-smooth angle into account, but now I need to manually add sharp edges to get correct result.

Exact steps for others to reproduce the error

  1. Bevel 4 edges of the default cube to get 4 rounded corners and two opposite flat polygons
  2. Enable auto-smooth shading with default 30 deg
  3. Apply Weighted Normal modifier and enable "Keep Sharp" option
  4. Side edges should be sharp and side planes should be flat, but as shown on screens they are not
  5. They turn into flat after manually adding sharp edges
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-17 23:33, hash: `a9358f5274b6` Broken by 17d161f56537d424d369a1dcf4c47d3976842af8 **Short description of error** Weighted Normal modifier produces weird artefacts with Keep Sharp enabled. Previously it correctly took auto-smooth angle into account, but now I need to manually add sharp edges to get correct result. **Exact steps for others to reproduce the error** 1. Bevel 4 edges of the default cube to get 4 rounded corners and two opposite flat polygons 2. Enable auto-smooth shading with default 30 deg 3. Apply Weighted Normal modifier and enable "Keep Sharp" option 4. Side edges should be sharp and side planes should be flat, but as shown on screens they are not 5. They turn into flat after manually adding sharp edges
Alex P added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-18 10:07:39 +02:00
Member

Could be similar to #107514 but it's supposed to be already fixed.

Could be similar to #107514 but it's supposed to be already fixed.
Member

Unable to replicate this in current master (4.0.0-406cfd214aaad9c90b62ce48eda6d72d2eacb6fe).
Will check in 3.6-beta
@ChengduLittleA , do you observe this?

**System Information**
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78
Unable to replicate this in current master (4.0.0-`406cfd214aaad9c90b62ce48eda6d72d2eacb6fe`). Will check in 3.6-beta @ChengduLittleA , do you observe this? ``` **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78 ```
Member

@PratikPB2123 no I cant reproduce this either (im now on integrated graphics)

@PratikPB2123 no I cant reproduce this either (im now on integrated graphics)

I can rerpoduce. Checked #107514 as well and 3.5 produces different result than 3.6/main. Will bisect

I can rerpoduce. Checked #107514 as well and 3.5 produces different result than 3.6/main. Will bisect
Richard Antalik added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-05-24 08:57:28 +02:00
Member
CC @HooglyBoogly
Iliya Katushenock added the
Interest
Modifiers
label 2023-05-24 10:51:05 +02:00
Hans Goudey self-assigned this 2023-05-24 14:41:11 +02:00
Member

I looked into this and found d168df7c23. No luck with the problem here yet though. I think it's a problem with normals_loop_custom_set.

I looked into this and found d168df7c2320b859ae6971481894e14ecf862849. No luck with the problem here yet though. I think it's a problem with `normals_loop_custom_set`.
Member

Also see: #108384

Also see: #108384
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-03 03:24:05 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-06-03 03:34:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108039
No description provided.